--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,10 +24,12 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.0
+  dio: ^3.0.10
   email_validator: ^1.0.6
   equatable: ^1.2.5
   flutter_bloc: ^6.0.6
   flutter_spinkit: ^4.1.2+1
+  get: ^3.17.1
   line_awesome_icons: ^1.0.4+2
   location: ^3.0.2
   mask_text_input_formatter: ^1.1.0
