--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,11 +27,15 @@ dependencies:
   dio: ^3.0.10
   email_validator: ^1.0.6
   equatable: ^1.2.5
+  firebase_auth: ^0.18.3+1
+  firebase_core: ^0.5.2+1
   flushbar: ^1.10.4
   flutter_bloc: ^6.0.6
+  flutter_facebook_auth: ^1.0.2+1
   flutter_spinkit: ^4.1.2+1
   get: ^3.17.1
   get_storage: ^1.3.2
+  google_sign_in: ^4.5.6
   line_awesome_icons: ^1.0.4+2
   location: ^3.0.2
   mask_text_input_formatter: ^1.1.0
